# client-ui-common

./: Cargo.toml
ffi/: Cargo.toml  build.rs  cbindgen.toml
ffi/include/: adele_client_core.h
ffi/src/: engine.rs  lib.rs  view_event.rs
src/: context_usage.rs  lib.rs  message.rs  reducer.rs  selected_models.rs
