[package]
name = "client-ui-common"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[dependencies]
# Protocol TYPES consumed (voice-free) from desktop-assistant. `default-features
# = false` drops client-common's D-Bus (zbus) transport feature — the shared core
# needs only the wire types (SignalEvent, ConversationDetail/Summary, ChatMessage),
# never the transport itself (RPCs are expressed as `Effect`s the client runs).
#
# NOTE: client-consumption dependency-SOURCING (git vs path vs `[patch]`) is being
# resolved separately so `client-common` isn't duplicated in a client's build graph
# (which would split `SignalEvent` into two incompatible types). These path-deps
# are for standalone build/test of THIS crate; the clients' wiring follows.
desktop-assistant-client-common = { path = "../desktop-assistant/crates/client-common", default-features = false }
desktop-assistant-api-model = { path = "../desktop-assistant/crates/api-model" }

# Voice-output POLICY type (`AdeleOutput`) + its narration gates — owned by the
# voice crates, merely consumed here. This is why the crate lives OUTSIDE the
# desktop-assistant workspace: the daemon repo stays voice-free.
adele-voice-client-common = { path = "../voice/crates/client-voice" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
