[workspace]
# The pure reducer (this root package) + the native C-ABI core that wraps it.
# The reducer stays transport-free and wasm-clean (built with `-p
# client-ui-common --target wasm32`); the `ffi` member is native-only (it pulls
# the `client-common` transport + tokio) and is what `adele-kde` links against.
members = ["ffi"]
resolver = "2"

[package]
name = "client-ui-common"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"

[dependencies]
# The shared client core consumes only wasm-clean TYPES — never a transport.
# Wire types, the `SignalEvent` stream, and the client-facing conversation views
# (`api::client`) all come from desktop-assistant's `api-model`, which compiles
# to wasm32; `AdeleOutput` + its refinement gates come from
# `adele-voice-client-common` with the native `chunker` feature off. RPCs are
# expressed as `Effect`s the client runs, so no transport crate is needed here
# — which is what lets this crate (and the UIs that embed it) target wasm.
#
# Blocked-by: desktop-assistant#387 (api-model wasm-clean: SignalEvent +
# api::client) and voice#116 (optional chunker → wasm-clean AdeleOutput). Until
# both land on their repos' main, build against those branches.
#
# NOTE: client-consumption dependency-SOURCING (git vs path vs `[patch]`) is
# still being resolved so `api-model` isn't duplicated in a client's build graph.
desktop-assistant-api-model = { path = "../desktop-assistant/crates/api-model" }
adele-voice-client-common = { path = "../voice/crates/client-voice", default-features = false }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
